cost_per_action_type adding